
 8. SOLR-840: BinaryResponseWriter does not handle incompatible data in fields (Noble Paul via shalin)

 9. SOLR-803: CoreAdminRequest.createCore fails because name parameter isn't set (Sean Colombo via ryan)

10. SOLR-869: Fix file descriptor leak in SolrResourceLoader#getLines (Mark Miller, shalin)

11. SOLR-872: Better error message for incorrect copyField destination (Noble Paul via shalin)


Other Changes
----------------------
 1. Upgraded to Lucene 2.4.0 (yonik)

 2. SOLR-805: Upgraded to Lucene 2.9-dev (r707499) (koji)

 3. DumpRequestHandler (/debug/dump): changed 'fieldName' to 'sourceInfo'. (ehatcher)

 4. SOLR-852: Refactored common code in CSVRequestHandler and XMLUpdateRequestHandler (gsingers, ehatcher)

 5. SOLR-871: Removed dependancy on stax-utils.jar.  If you using solr.jar and running 
    java 6, you can also remove woodstox and geronimo.  (ryan)

 6. SOLR-465: Upgraded to Lucene 2.9-dev (r719351) (shalin)


Build
----------------------
 1. SOLR-776: Added in ability to sign artifacts via Ant for releases (gsingers)

 2. SOLR-854: Added run-example target (Mark Miller vie ehatcher)
 

Documentation
----------------------
 1. SOLR-789: The javadoc of RandomSortField is not readable (Nicolas Lalevée via koji)


================== Release 1.3.1 ==================
Solr 1.3.1 is a maintenance release -- it does not contain any new features,
it only contains bug fixes and upgrades to stable dependant libraries.


Detailed Change List
----------------------


Bug Fixes
----------------------

 1. SOLR-802: Fix a potential null pointer error in the distributed FacetComponent
    (David Bowen via ryan)
    
 2. SOLR-346: Use perl regex to improve accuracy of finding latest snapshot in snapinstaller (billa)

 3. SOLR-830: Use perl regex to improve accuracy of finding latest snapshot in snappuller (billa)


================== Release 1.3.0 20080915 ==================

Upgrading from Solr 1.2
-----------------------